--- a/src/Edit_Partner.form
+++ b/src/Edit_Partner.form
@@ -173,7 +173,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Container class="javax.swing.JPanel" name="partner_txt_panel">
+    <Container class="javax.swing.JPanel" name="partner_panel">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="460" y="112" width="-1" height="-1"/>
